fix(css): `no-scrollbar`

--- a/src/index.css
+++ b/src/index.css
@@ -120,3 +120,19 @@
     @apply bg-background text-foreground m-0 flex min-w-0 min-h-dvh;
   }
 }
+
+@layer utilities {
+
+  /* Hide scrollbar for Chrome, Safari and Opera */
+  .no-scrollbar::-webkit-scrollbar {
+    display: none;
+  }
+
+  /* Hide scrollbar for IE, Edge and Firefox */
+  .no-scrollbar {
+    -ms-overflow-style: none;
+    /* IE and Edge */
+    scrollbar-width: none;
+    /* Firefox */
+  }
+}
